added media queries to free-texts (historie, home and phylosophie

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 window.addEventListener('scroll', function() {
                     var scrollPosition = window.pageYOffset;
                     var headerPic = document.getElementById('headerPic');
-                    headerPic.style.transform = 'translateY(' + scrollPosition * 0.5 + 'px)'; 
+                    headerPic.style.transform = 'translateY(' + scrollPosition * 0.3 + 'px)'; 
                 });
-                </script>                
+            </script>                
         </div>
         <div class="container1">
             <p class="para_c1">INDIVIDUELLES COACHING FÜR MENSCH UND HUND</p>
@@ -85,15 +85,15 @@
                     <p class="home_main_text">Sie suchen ein exakt auf Sie und Ihren Hund zugeschnittenes Trainingsprogramm?
                     Ihr Vierbeiner ist Ihr Arbeitskollege und Sie benötigen eine spezielle Ausbildung?
                     Sie möchten den Hundeführerschein machen oder brauchen eine Wesensüberprüfung für Ihren Hund?
-                    Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?<br>
+                    Ihr Vierbeiner stellt Sie vor eine spezielle Herausforderung?<br><br>
                     Dann sind Sie bei mir genau richtig!
                     Ich arbeite mit Ihnen gemeinsam am Aufbau von gegenseitigem Verständnis und Vertrauen – basierend auf neuesten wissenschaftlichen Erkenntnissen, meiner jahrelangen Erfahrung und meiner Leidenschaft für Hunde.
-                    Dabei berücksichtige ich sowohl die Natur des Hundes als auch Ihre persönlichen Wünsche und Ziele!
-                    Erfahren Sie hier mehr über meine Leistungen.
-                    Sie haben Interesse oder noch Rückfragen?
-                    Kontaktieren Sie mich gerne für ein unverbindliches Kennenlerngespräch. Ich freue mich auf Sie und Ihren Hund!</p>
-                    <p></p>
-                    <p class="home_main_text">Ihre Jennifer Falke</p>
+                    Dabei berücksichtige ich sowohl die Natur des Hundes als auch Ihre persönlichen Wünsche und Ziele!<br><br>
+                    Erfahren Sie hier mehr über meine Leistungen.<br><br>
+                    Sie haben Interesse oder noch Rückfragen?<br>
+                    Kontaktieren Sie mich gerne für ein unverbindliches Kennenlerngespräch. Ich freue mich auf Sie und Ihren Hund!
+                    <br><br>
+                    Ihre Jennifer Falke</p>
                     <p class="para_c1_line" id="home"></p>
                 </div>
             </div>
@@ -102,21 +102,21 @@
         <div class="info-box"> 
             <h1 class="header_mein_hundetraining">MEIN HUNDETRAINING</h1>
             <p class="phylosophie_text">Wie jedes Lebewesen ist auch jeder Hund individuell, hat unterschiedliche Charakterzüge,
-                Prägungen, Interessen und Ängste. <br>Die Konstellation unserer Hunde ist abhängig von seinen
+                Prägungen, Interessen und Ängste. <br><br>Die Konstellation unserer Hunde ist abhängig von seinen
                 bisherigen Erfahrungen und dem Erbe, welches seine jeweiligen Vorfahren ihm mit auf den
-                Weg gegeben haben.<br>Deswegen reagieren unsere Hunde genauso wie wir Menschen auf
-                bestimmte Situationen mit unterschiedlichen Reaktionen.<br>
+                Weg gegeben haben.<br><br>Deswegen reagieren unsere Hunde genauso wie wir Menschen auf
+                bestimmte Situationen mit unterschiedlichen Reaktionen.<br><br>
                 Um erfolgreich zu sein gilt es, die positiven Eigenschaften des Hundes hervorzuheben, zu
-                nutzen, auszubauen und negative Eigenschaften möglichst auszugleichen.<br> Aus diesem
+                nutzen, auszubauen und negative Eigenschaften möglichst auszugleichen.<br><br> Aus diesem
                 Grund erarbeite ich mit Ihnen gemeinsam ein auf den einzelnen Hund zugeschnittenes
                 Trainingsmodell, das aus unterschiedlichen Elementen des Hunde-Coachings
                 zusammengestellt wird. Und auch Sie stehen bei mir im Vordergrund, da nur Sie durch das
                 Erlangen des Wissens und durch das Verständnis der Verhaltensweisen und
                 Kommunikationsarten Ihres Hundes eine Verständigung erreichen und das Tier erfolgreich
                 und auf einer artgerechten Ebene führen können.
-                Zu Beginn steht die Analyse Ihres Begleiters. <br>Seine Anlagen, sowohl positiver wie negativer
+                Zu Beginn steht die Analyse Ihres Begleiters. <br><br>Seine Anlagen, sowohl positiver wie negativer
                 Natur, müssen gründlich erkundet werden, um optimale Voraussetzungen zu schaffen.
-                <br>Deshalb beginnt das Training bei „Falke Dog Coaching“ grundsätzlich mit Individualstunden.
+                <br><br>Deshalb beginnt das Training bei „Falke Dog Coaching“ grundsätzlich mit Individualstunden.
                 <br><br>Mein Ziel ist es, Ihnen ohne jeglichen Leistungsdruck eine entspannte und freudige
                 Zusammenarbeit mit Ihrem Hund zu ermöglichen, die Sie gemeinsam an Ihr gewünschtes
                 Ziel bringt.</p>
@@ -164,7 +164,7 @@
             <div class="block">
                 <h2 class="block-title">DIENSTHUNDETRAINING</h2>
                 <div class="content-container">
-                    <ul class="block-list">
+                    <ul class="block-only-text">
                         <p class="block-list-text">Sie betreiben ein Sicherheitsunternehmen oder sind Diensthundeführer und erfüllen damit die nötige gesetzliche Voraussetzung einen Hund seinen Anlagen enstprechend als Schutz- oder Sprengstoffspürhund auszubilden. Dann kontaktieren Sie mich gerne.</p>
                     </ul>
                     <ul class="image-button-container">
@@ -177,7 +177,7 @@
             <div class="block">
                 <h2 class="block-title">WORKSHOPS / SONSTIGES</h2>
                 <div class="content-container">
-                    <ul class="block-list">
+                    <ul class="block-only-text">
                         <p class="block-list-text">Sie möchten mehr über Hunde wissen? Oder benötigen eine individuelle Beratung
                                                     vor der Anschaffung Ihres Hundes? Sie benötigen die erforderliche
                                                     Erlaubnis zum Halten von großen Hunden oder Hunden bestimmter
@@ -237,21 +237,21 @@
           <p class="historie_main_text">Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh.
             Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen.
             Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause.
-            Sie begleitete mich ganze 16 Jahre!
+            Sie begleitete mich ganze 16 Jahre!<br><br>
             Der Wolf als Vorfahre des Hundes interessiert mich besonders, da in jedem Haushund seine Gene enthalten sind.
             Jedoch ist die Wesensdistanz zwischen beiden recht groß.
-            Um den wölfischen Aspekten unserer modernen Hunde näherzukommen, entschied ich mich, den Straßenhund zu erforschen.
+            Um den wölfischen Aspekten unserer modernen Hunde näherzukommen, entschied ich mich, den Straßenhund zu erforschen.<br><br>
             Hierfür reiste ich 2007 für ein Jahr nach Russland, da die Population der freilebenden Hunde dort besonders groß ist.
-            Die dabei gewonnenen Erfahrungen sind mir bei meiner Arbeit eine große Hilfe.
+            Die dabei gewonnenen Erfahrungen sind mir bei meiner Arbeit eine große Hilfe.<br><br>
             Nach meiner Rückkehr beschloss ich, auf meinen dortigen Beobachtungen aufzubauen und begann meine Ausbildung als Hunde-Coach und Verhaltensberaterin bei „Kennel 101“ 
             (Ausbildungszentrum für Sprengstoffspür- und Diensthunde sowie Hundepension und Zuchtstätte) Das Wissen meines Mentors bei „Kennel 101“ basiert auf einer 25-jährigen erfolgreichen 
-            Arbeit auf internationaler Ebene. Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes. Seit April 2010 
-            arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin. Im Dezember 2014 erhielt ich die nach neuesten Gesetzen erforderliche Zertifizierung gem. § 11 Abs. 1 Nr. 8 f 
-            TierSchG. Im Jahre 2016 wurde diese um den § 11 Abs. 1 Nr. 6 TierSchG erweitert. Um mir rund um das Thema Tier &amp; Natur noch mehr fundiertes Wissen anzueignen, machte ich 2014 darüber
-            hinaus den Jagdschein. 2018 erweiterte ich mein Portfolio in dem ich die Prüfung für Sachverständige beim LANUV NRW ablegte. Hierdurch bin ich dazu berechtigt Verhaltensüberprüfungen für 
-            Hunde bestimmter Rassen durchzuführen und den Sachkundenachweis abzunehmen. Im Jahr 2021 schrieb ich meine Diplomarbeit zum Thema „Bestrafung von Diensthunden in der Diensthundeausbildung“. 
-            Aufbauend auf meinen Erkenntnissen aus dieser Forschung schreibe ich heute an meiner Doktorarbeit zu diesem und weiteren Themen rund um das Thema Diensthundewesen. Seit 2023 bin ich Teil der 
-            Mammalia AG, welche durch Professor Dr. Udo Gansloßer geleitet wird.</div>p>
+            Arbeit auf internationaler Ebene. <br><br>Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes. Seit April 2010 
+            arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin. <br><br>Im Dezember 2014 erhielt ich die nach neuesten Gesetzen erforderliche Zertifizierung gem. § 11 Abs. 1 Nr. 8 f 
+            TierSchG. <br><br>Im Jahre 2016 wurde diese um den § 11 Abs. 1 Nr. 6 TierSchG erweitert. Um mir rund um das Thema Tier &amp; Natur noch mehr fundiertes Wissen anzueignen, machte ich 2014 darüber
+            hinaus den Jagdschein. <br><br>2018 erweiterte ich mein Portfolio in dem ich die Prüfung für Sachverständige beim LANUV NRW ablegte. Hierdurch bin ich dazu berechtigt Verhaltensüberprüfungen für 
+            Hunde bestimmter Rassen durchzuführen und den Sachkundenachweis abzunehmen. <br><br>Im Jahr 2021 schrieb ich meine Diplomarbeit zum Thema „Bestrafung von Diensthunden in der Diensthundeausbildung“. 
+            Aufbauend auf meinen Erkenntnissen aus dieser Forschung schreibe ich heute an meiner Doktorarbeit zu diesem und weiteren Themen rund um das Thema Diensthundewesen. <br><br>Seit 2023 bin ich Teil der 
+            Mammalia AG, welche durch Professor Dr. Udo Gansloßer geleitet wird.</p></div>
             <p class="para_c1_line"></p>
         </div>
     </main>
